# sketches

./: .gitignore  CLAUDE.md  README.md  SESSION_LOG.md
Geomonic/: CONCEPT.md  Cargo.toml  DESIGN_NOTES.md  RESEARCH_NOTES.md
Geomonic/output/: iv_lyd_on_vi_arc.mid  iv_lyd_on_vi_cycle.mid  iv_lyd_on_vi_dwell.mid  iv_lyd_on_vi_eno.mid  lydian_fibonacci.mid  lydian_lcc_stack.mid  lydian_spectral.mid  lydian_tonnetz.mid  lydian_wholetone_mirror.mid
Geomonic/src/: gui.rs  lib.rs
Geomonic/tools/: iv_lyd_on_vi.py  lydian_geometry.py
_ideas/: README.md  browser-theory-toys.md  design-language.md
cadence-lab/: CONCEPT.md  index.html
chord-forge/: .gitignore  CONCEPT.md  composer.py  forge.py  forge_v2.py  forge_v3.py  hub.html  loop.sh
chord-scale-mapper/: CONCEPT.md  index.html
circle-of-fifths/: CONCEPT.md  index.html
emocute-toolkit/: .gitignore  ARCHITECTURE.md  AUTOMATION.md  CLAUDE.md  CONCEPT.md  PLAN.md  README.md
euclid-rhythm/: CONCEPT.md  index.html
groove-swing/: CONCEPT.md  index.html
hub/: CONCEPT.md  index.html
interval-ear-trainer/: CONCEPT.md  index.html
line-bot/: .env.example  .gitignore  CONCEPT.md  README.md  guard.mjs  server.mjs  test_webhook.mjs  tunnel-config.yml  watchdog.sh
mode-mixer/: CONCEPT.md  index.html
negative-harmony/: CONCEPT.md  index.html
reharm-roulette/: CONCEPT.md  index.html
tension-stacker/: CONCEPT.md  index.html
voice-rooms/: CONCEPT.md  assemble.mjs  package-lock.json  package.json  render.yaml  server.js
voicing-lab/: CONCEPT.md  index.html
yay_bot/: .gitignore  CONCEPT.md  README.md  bot.mjs  (+13 more)
(+337 files in other folders)
